# pbl2

./: .gitignore  presentation_guide.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: agent.py  auth.py  llm.py  projects.py  router.py  test_cases.py  test_execution.py  test_generation.py  test_run.py
backend/app/core/: security.py
backend/app/core/browser/: dom_parser.py  playwright_controller.py
backend/app/core/llm/: __init__.py  agent_client.py  base.py  groq_client.py  lmstudio_client.py  openai_compat_client.py  types.py
backend/app/core/rag/: embeddings.py  knowledge_manager.py  vector_store.py
backend/app/db/: mongodb.py
backend/app/db/repositories/: project_repo.py  test_case_repo.py  user_repo.py
backend/app/models/: common.py  project.py  test_case.py  user.py
backend/app/services/: agent_service.py  playwright_generator.py  playwright_runner.py  test_generation_service.py  test_run_service.py
backend/app/utils/: logger.py
backend/docs/: SETUP_AND_TESTING.md
backend/scripts/: view_rag.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Badge.jsx  JwtModal.jsx  NeedsActionModal.jsx  NewProjectModal.jsx  TestCaseDetailModal.jsx  TestCaseModal.jsx  ThemeToggle.jsx
frontend/src/pages/: LandingGate.jsx  LandingPage.jsx  Login.jsx  LoginPage.jsx  ProjectDetailPage.jsx  ProjectDetails.jsx  ProjectsHome.jsx  ProjectsPage.jsx
frontend/src/store/: useAuthStore.js  useStore.js  useThemeStore.js
